CLASH KA CHUTIYAP

--- a/CREDENZ-02-02-22/clash/static/css/submissions.css
+++ b/CREDENZ-02-02-22/clash/static/css/submissions.css
@@ -16,6 +16,10 @@ html {
       height: 530px;
       overflow-y: scroll;
   }
+  
+  .activeques{
+    border-bottom: 2px solid white;
+  }
 
   #ssrrnnood{
     display: none;
