--- a/CREDENZ-02-02-22/clash/static/css/coding.css
+++ b/CREDENZ-02-02-22/clash/static/css/coding.css
@@ -20,6 +20,12 @@
     overflow:auto !important;
 } */
 
+.mydivss
+{
+    border: 10px solid #dae4da;
+    max-height: 50px;
+}
+
 .lcont{
     /* background-color: red; */
     flex:1;
@@ -119,13 +125,20 @@
 
 .lcontmain{
     /* background-color: yellowgreen; */
-    height: calc(100vh - 270px);
+    /* height: fit-content; */
+    /* height: 100%; */
+    overflow-y: scroll;
+}
+
+.myscroll{
+    height:fit-content;
+    /* overflow-y: scroll; */
 }
 
 #questionarea{
     /* width: 100%; */
     width: calc(100% - 20px);
-    height: 100%;
+    /* height: 100%; */
     resize: none;
     padding: 25px;
     margin: 10px;
