--- a/CREDENZ-02-02-22/clash/templates/contest.html
+++ b/CREDENZ-02-02-22/clash/templates/contest.html
@@ -230,6 +230,7 @@
             <div class="footer-text pt-3 pb-3">PISB <span>&copy</span></div>
         </div>
     </footer>
+    <script src="https://kit.fontawesome.com/a2d549fb45.js" crossorigin="anonymous"></script>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
