--- a/CREDENZ-02-02-22/clash/templates/question.html
+++ b/CREDENZ-02-02-22/clash/templates/question.html
@@ -87,11 +87,46 @@
               <a class="nav-link navvi" aria-current="page" href="{%url 'clash-leaderboard'%}"
                 style="margin-left: 10px;margin-right: 10px;">Leaderboard</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link navvi" aria-current="page" href="{%url 'clash-home'%}"
                   style="margin-left: 10px;margin-right: 10px;">Instructions</a>
-            </li>          
+            </li>           -->
   
+            <li class="nav-item">
+              <a class="nav-link navvi" style="margin-left: 10px;margin-right: 10px;cursor:default;" data-bs-toggle="modal" data-bs-target="#iModal">Instructions</a>
+  
+                  <!-- <button type="button" class="btn btn-primary">
+                      Launch demo modal
+                  </button> -->
+                  
+                  <!-- Modal -->
+                  <div class="modal fade" id="iModal" tabindex="-1" aria-labelledby="LogoutModalLabel" aria-hidden="true">
+                      <div class="modal-dialog">
+                      <div class="modal-content">
+                          <div class="modal-header">
+                          <h5 class="modal-title" id="LogoutModalLabel">Instructions!</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          </div>
+                          <div class="modal-body text-center " style="text-align: left;">
+                            <ol>
+                              <li>
+                                This round comprises of 6 questions. All questions have marketing scheme +100 for right answer.
+                              </li>
+                              <li>
+                                Please play the game in full screen (Fn+F11) for better resolution.
+                              </li>
+                            </ol>
+                            
+                          </div>
+                          <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          <!-- <button type="button" class="btn btn-danger">Logout</button> -->
+                          </div>
+                      </div>
+                      </div>
+                  </div>
+          </li>
+
             <li class="nav-item ">
               <a class="nav-link navvi" style="margin-left: 10px;margin-right: 10px;cursor:pointer;" data-bs-toggle="modal" data-bs-target="#LogoutModal">Logout</a>
   
@@ -184,8 +219,13 @@
   </div>
   {% endif %}
         <div class="lcontmain">
-          <div class="myscroll" name="questionarea" id="questionarea" rows="10" readonly >
-  {{ques.title}}
+          <div  name="questionarea" id="questionarea" rows="10" readonly >
+            <div class="myscroll">
+              <div>{{ques.title}} <br><br><br><br><br><br><br></div>
+            <div></div>zzzzzz
+            </div>
+            
+            
 
   {{ques.body}}
   
@@ -200,7 +240,7 @@ Constraints:
 Output Format:
 
 {{ques.output_format}}
-          
+
 Sample Input:
 
 {{ques.sample_input}}
@@ -324,7 +364,7 @@ Sample Output:
     <script src="{% static 'ace-builds-master/src-noconflict/ext-language_tools.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/coding_editor.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/coding_script.js' %}"></script>
-    
+    <script src="https://kit.fontawesome.com/a2d549fb45.js" crossorigin="anonymous"></script>
     <!-- jquery -->
     <!-- <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -429,11 +469,11 @@ Sample Output:
         localStorage.setItem(`cppc${aq-1}`, document.getElementById("w3revi").textContent);
       }
       console.log('hello');
-      setTimeout(scode, 5000);
-      // console.log(localStorage.getItem(`pyc${aq-1}`));
-      // console.log(localStorage.getItem(`cc${aq-1}`));
-      // console.log(localStorage.getItem(`cppc${aq-1}`));
-      
+      setTimeout(scode, 500);
+      console.log(localStorage.getItem(`pyc${aq-1}`));
+      console.log(localStorage.getItem(`cc${aq-1}`));
+      console.log(localStorage.getItem(`cppc${aq-1}`));
+      console.log(aq);
       }
       scode();
   
@@ -490,9 +530,11 @@ Sample Output:
           //seconds
         }, 0)
     }());
+
   </script>
   
     <script src="https://kit.fontawesome.com/84ff0cdea4.js" crossorigin="anonymous"></script>
+
     <!-- Footer goes here -->
     <footer class="text-center fixed-bottom footerr">
       <div class="container-fluid">
