--- a/CREDENZ-02-02-22/sandbox/templates/base.html
+++ b/CREDENZ-02-02-22/sandbox/templates/base.html
@@ -211,10 +211,10 @@
     </div>
 
     <div class="container-fluid test-cases mob-cases">
-      <div class="row text-center mob-row mb-3">
-        <div class="col-4 col-md-4">
+      <div class="row text-center mob-row mb-3 " > 
+        <div class="col-4 col-md-4 abcdiv" style="display:flex;flex-direction: row;width:100%;flex-wrap: wrap;justify-content: space-around;align-items: center;">
 		      {% for test in testcase %}
-          <div class="card height-card padup" id="tc">
+          <div class="card height-card padup" id="tc" style="min-width: fit-content;">
             <div class="card-body">
               <h5 class="glow">
                 Testcase {{forloop.counter}} {{test}}
@@ -242,7 +242,7 @@
     </div>
   </footer>
 </body>
-
+<script src="https://kit.fontawesome.com/a2d549fb45.js" crossorigin="anonymous"></script>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
