--- a/CREDENZ-02-02-22/clash/templates/trial1.html
+++ b/CREDENZ-02-02-22/clash/templates/trial1.html
@@ -71,9 +71,9 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                     <h5 class="modal-title" id="LogoutModalLabel">Instructions!</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
-                                    <div class="modal-body text-center " style="text-align: left;">
+                                    <div class="modal-body" style="text-align: left;">
                                       <ol>
                                         <li>
                                           This round comprises of 6 questions. All questions have marketing scheme +100 for right answer.
