--- a/CREDENZ-02-02-22/clash/static/css/leaderboard.css
+++ b/CREDENZ-02-02-22/clash/static/css/leaderboard.css
@@ -33,6 +33,8 @@ body {
   background-color: #222222;
   font-size: x-large;
   border: 2px solid #000000;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .rank {
@@ -94,12 +96,17 @@ body {
   height: calc(100vh - 112px);
   display: flex;
   flex-direction: row;
+  /* added this row */
+  /* align-items: center; */
 }
 
-.maincard{
+.maincard {
   width: calc(25% - 40px);
   margin: 20px;
-  margin-top: 45px;
+  /* changed below */
+  /* margin-top: 45px; */
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .tabdiv{
