--- a/CREDENZ-02-02-22/clash/static/css/submissions.css
+++ b/CREDENZ-02-02-22/clash/static/css/submissions.css
@@ -36,6 +36,12 @@ html {
       margin: 20px;
       margin-bottom: 60px;
     }
+    /* isko add kar */
+    .activess{
+      color: #fff;
+      background-color: rgba(255,255,255,0.45) !important;
+  }
+
     .circle-dot {
       border-radius: 50%;
       height: 17px;
@@ -123,3 +129,4 @@ html {
         padding-right: 12px !important;
       }
     }  
+
