--- a/CREDENZ-02-02-22/clash/templates/leaderboard.html
+++ b/CREDENZ-02-02-22/clash/templates/leaderboard.html
@@ -119,9 +119,9 @@
                       <div class="modal-content">
                           <div class="modal-header">
                           <h5 class="modal-title" id="LogoutModalLabel">Instructions!</h5>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
                           </div>
-                          <div class="modal-body text-center " style="text-align: left;">
+                          <div class="modal-body " style="text-align: left;">
                             <ol>
                               <li>
                                 This round comprises of 6 questions. All questions have marketing scheme +100 for right answer.
@@ -214,7 +214,7 @@
 
     <!-- your code goes here -->
 
-    <div class="maincnt">
+    <div class="maincnt ">
         <div class="card maincard">
           <div
             class="card-header d-flex flex-column justify-content-center align-items-center"
@@ -245,7 +245,7 @@
         </div>
       <div class="tabdiv">
         <div class="container tdiv">
-			<table class="table">
+			    <table class="table">
 				<thead style="background-color: #293b5f; color: rgb(255, 255, 255)">
 			<tr>
 				<th scope="col">Rank</th>
