--- a/CREDENZ-02-02-22/sandbox/templates/base.html
+++ b/CREDENZ-02-02-22/sandbox/templates/base.html
@@ -86,7 +86,7 @@
                       <div class="modal-content">
                           <div class="modal-header">
                           <h5 class="modal-title" id="LogoutModalLabel">Instructions!</h5>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
                           </div>
                           <div class="modal-body text-center " style="text-align: left;">
                             <ol>
